# Sentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
ADR/: 001-raw-api-over-langchain.md  002-chroma-over-pinecone.md  003-multi-agent-architecture.md  004-mcp-and-a2a-protocols.md  005-simulated-data-strategy.md
agent/: __init__.py  core.py  llm_client.py  models.py  prompts.py
agent/agents/: __init__.py  remediation.py  research.py  triage.py
api/: __init__.py  deps.py  main.py  routes.py  seed_data.py
api/templates/: index.html
dashboard/: app.py
evaluation/: __init__.py  __main__.py  report.py  runner.py  scorer.py
infra/: app.py  cdk.json  stack.py
monitoring/: __init__.py  finops.py  logging.py  metrics.py  prometheus.yml  tracer.py
protocols/: __init__.py  a2a.py  mcp_server.py
rag/: __init__.py  embeddings.py  engine.py  ingest.py
runbooks/: certificate-expiry-remediation.md  cpu-spike-investigation.md  database-connection-pool-exhaustion.md  deployment-rollback-procedure.md  disk-space-recovery.md  dns-resolution-failures.md  high-latency-troubleshooting.md  kafka-consumer-lag.md  memory-leak-detection.md  rate-limiting-configuration.md
scripts/: deploy.sh
simulation/: __init__.py  run_demo.py
tests/: __init__.py  conftest.py  test_agent.py  test_api.py  test_eval.py  test_finops.py  test_rag.py  test_streaming.py  test_tools.py
tools/: __init__.py  dependencies.py  deployments.py  log_search.py  metrics.py  registry.py
(+18 files in other folders)
